--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>AyoMlampah</title>
+    <link rel="icon" type="image/x-icon" href="res/images/favicon.ico" />
     <link href="bootstrap-5.3.2-dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="res/css/style.css" />
     <link
