feat: make the table responsive

--- a/index.html
+++ b/index.html
@@ -213,54 +213,56 @@
           style="background-color: #072c60; border-radius: 20px"
         >
           <p class="card-text" style="color: white">Kalender 2023 - 2024</p>
-          <table class="table table-hover table-transparent">
-            <thead>
-              <tr>
-                <th scope="col">Nama</th>
-                <th scope="col">Tanggal</th>
-                <th scope="col">Kategori</th>
-                <th scope="col">Lokasi</th>
-                <th scope="col">Organizer</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Jejak Batik Yogyakarta</th>
-                <td>20-12-2023</td>
-                <td>Jalan Cerita • Sejarah</td>
-                <td>@Pakualaman</td>
-                <td>@alon.mlampah</td>
-              </tr>
-              <tr>
-                <th scope="row">Jejak Batik Yogyakarta</th>
-                <td>20-12-2023</td>
-                <td>Jalan Cerita • Sejarah</td>
-                <td>@Pakualaman</td>
-                <td>@alon.mlampah</td>
-              </tr>
-              <tr>
-                <th scope="row">Jejak Batik Yogyakarta</th>
-                <td>20-12-2023</td>
-                <td>Jalan Cerita • Sejarah</td>
-                <td>@Pakualaman</td>
-                <td>@alon.mlampah</td>
-              </tr>
-              <tr>
-                <th scope="row">Jejak Batik Yogyakarta</th>
-                <td>20-12-2023</td>
-                <td>Jalan Cerita • Sejarah</td>
-                <td>@Pakualaman</td>
-                <td>@alon.mlampah</td>
-              </tr>
-              <tr>
-                <th scope="row">Jejak Batik Yogyakarta</th>
-                <td>20-12-2023</td>
-                <td>Jalan Cerita • Sejarah</td>
-                <td>@Pakualaman</td>
-                <td>@alon.mlampah</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table table-hover table-transparent">
+              <thead>
+                <tr>
+                  <th scope="col">Nama</th>
+                  <th scope="col">Tanggal</th>
+                  <th scope="col">Kategori</th>
+                  <th scope="col">Lokasi</th>
+                  <th scope="col">Organizer</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Jejak Batik Yogyakarta</th>
+                  <td>20-12-2023</td>
+                  <td>Jalan Cerita • Sejarah</td>
+                  <td>@Pakualaman</td>
+                  <td>@alon.mlampah</td>
+                </tr>
+                <tr>
+                  <th scope="row">Jejak Batik Yogyakarta</th>
+                  <td>20-12-2023</td>
+                  <td>Jalan Cerita • Sejarah</td>
+                  <td>@Pakualaman</td>
+                  <td>@alon.mlampah</td>
+                </tr>
+                <tr>
+                  <th scope="row">Jejak Batik Yogyakarta</th>
+                  <td>20-12-2023</td>
+                  <td>Jalan Cerita • Sejarah</td>
+                  <td>@Pakualaman</td>
+                  <td>@alon.mlampah</td>
+                </tr>
+                <tr>
+                  <th scope="row">Jejak Batik Yogyakarta</th>
+                  <td>20-12-2023</td>
+                  <td>Jalan Cerita • Sejarah</td>
+                  <td>@Pakualaman</td>
+                  <td>@alon.mlampah</td>
+                </tr>
+                <tr>
+                  <th scope="row">Jejak Batik Yogyakarta</th>
+                  <td>20-12-2023</td>
+                  <td>Jalan Cerita • Sejarah</td>
+                  <td>@Pakualaman</td>
+                  <td>@alon.mlampah</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
