--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
               <a class="nav-link" href="#hubungi">Hubungi Kami</a>
             </li>
             <li class="ps-5 pe-5 nav-item">
-              <button class="btn btn-outline-success" type="submit">
+              <button
+                class="btn btn-outline-success"
+                type="submit"
+                onclick="location.href='./pages/register.html';"
+              >
                 Register
               </button>
             </li>
@@ -318,5 +322,25 @@
 
     <script src="bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
     <script src="res/js/script.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+      // Add a scroll event listener to the window
+      window.addEventListener("scroll", function () {
+        // Get the navbar element
+        var navbar = document.querySelector(".navbar");
+
+        // Check if the user has scrolled past the navbar
+        if (window.scrollY > navbar.offsetTop) {
+          // Add the 'fixed-top' class to make the navbar fixed
+          navbar.classList.add("fixed-top");
+        } else {
+          // Remove the 'fixed-top' class to make the navbar static
+          navbar.classList.remove("fixed-top");
+        }
+      });
+    </script>
   </body>
 </html>
